# proxy-http-2

infra/modules/aws/compute/: main.tf
infra/modules/aws/network/vpc/: variables.tf
proxy/: CMakeLists.txt
proxy/src/core/: http2_codec.cc  listener.cc
proxy/src/load_balancing/: least_conn.cc
scripts/: deploy.sh  healthcheck.sh
